...
      color: theme.colors.primary,
    },
  };

  return (
    <View style={styles.container}>
      <GameNav title="Add Player" showBack={true} />
      <Tabs.Navigator
        screenOptions={tabScreenOptions}
        initialRouteName="AddPlayerRecents"
      >
        <Tabs.Screen
          name="AddPlayerRecents"
...
          }}
        />
        <Tabs.Screen
          name="AddPlayerSearch"
          component={AddPlayerSearch}
          options={{
            title: "Search",
          }}
        />
        <Tabs.Screen
          name="AddPlayerManual"
          component={AddPlayerManual}
          options={{
...
