...
          headerShown: false,
        }}
      />
      <Stack.Screen
        name="new"
        options={{
          title: "New Game",
          headerShown: false,
        }}
      />
      <Stack.Screen
        name="[gameId]"
        options={{
...
